WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171247
AX: Crash at WebCore::AXObjectCache::characterOffsetForIndex(int, WebCore::AccessibilityObject const*) + 703
https://bugs.webkit.org/show_bug.cgi?id=171247
Summary
AX: Crash at WebCore::AXObjectCache::characterOffsetForIndex(int, WebCore::Ac...
Nan Wang
Reported
2017-04-24 13:41:23 PDT
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x00007fffa0bc4a5f WebCore::AXObjectCache::characterOffsetForIndex(int, WebCore::AccessibilityObject const*) + 703 1 com.apple.WebCore 0x00007fffa1b7f8c3 -[WebAccessibilityObjectWrapper accessibilityAttributeValue:forParameter:] + 6099 2 com.apple.AppKit 0x00007fff9160fe53 ___NSAccessibilityEntryPointValueForAttributeWithParameter_block_invoke.842 + 476 3 com.apple.AppKit 0x00007fff9160ae65 NSAccessibilityPerformEntryPointObject + 16 4 com.apple.AppKit 0x00007fff9160c474 NSAccessibilityEntryPointValueForAttributeWithParameter + 189 5 com.apple.AppKit 0x00007fff913cdbcf CopyParameterizedAttributeValue + 540 6 com.apple.HIServices 0x00007fff9229186d _AXXMIGCopyParameterizedAttributeValue + 327 7 com.apple.HIServices 0x00007fff9229caf7 _XCopyParameterizedAttributeValue + 636 8 com.apple.HIServices 0x00007fff92274dd9 mshMIGPerform + 212 <
rdar://problem/31664234
>
Attachments
patch
(4.11 KB, patch)
2017-04-24 13:46 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nan Wang
Comment 1
2017-04-24 13:46:44 PDT
Created
attachment 308003
[details]
patch
WebKit Commit Bot
Comment 2
2017-04-24 17:05:24 PDT
Comment on
attachment 308003
[details]
patch Clearing flags on attachment: 308003 Committed
r215705
: <
http://trac.webkit.org/changeset/215705
>
WebKit Commit Bot
Comment 3
2017-04-24 17:05:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug