AX: Crash at WebCore::AXObjectCache::characterOffsetForIndex(int, WebCore::AccessibilityObject const*) + 703 https://bugs.webkit.org/show_bug.cgi?id=171247

Reviewed by Chris Fleizach.

Source/WebCore:

Crashed because we were passing a nil node into rootAXEditableElement(). Fixed it by
adding a null check.

Test: accessibility/mac/input-string-for-range-crash.html

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::characterOffsetForIndex):

LayoutTests:

* accessibility/mac/input-string-for-range-crash-expected.txt: Added.
* accessibility/mac/input-string-for-range-crash.html: Added.


Canonical link: https://commits.webkit.org/188109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215705 268f45cc-cd09-0410-ab3c-d52691b4dbfc