Source/WebCore/accessibility/AXObjectCache.cpp
@@ -2637,7 +2637,7 @@ CharacterOffset AXObjectCache::characterOffsetForIndex(int index, const Accessib
             // Do not include the new line character, always move the offset to the start of next node.
             if ((validate.node->isTextNode() || characterOffsetNodeIsBR(validate))) {
                 CharacterOffset next = nextCharacterOffset(validate, false);
-                if (!next.offset && rootAXEditableElement(next.node) == rootAXEditableElement(validate.node))
+                if (!next.isNull() && !next.offset && rootAXEditableElement(next.node) == rootAXEditableElement(validate.node))
                     result = next;
             }
             break;
